# Compactsee

./: .dockerignore  .gitignore  Cargo.toml  README.md  dockerfile  fly.toml  input.css  package.json
src/: app.rs  lib.rs  main.rs  style.css
src/core/: app_state.rs  contract_indexer.rs  mod.rs
src/domain/: mod.rs
src/ui/components/: contract_event_card.rs  contract_panel.rs  header.rs  mod.rs  state_view.rs
src/ui/pages/: home.rs
